<resources>
    <string name="app_name">FIRE</string>

    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>

    <string name="create">Create</string>
    <string name="verify_error">Passwords do not match</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="cancel">Cancel</string>
    <string name="creating_user">Creating new user...</string>
    <string name="create_user_success">Created new user!</string>
    <string name="create_user_fail">Failed to create new user</string>
    <string name="verify">verify password</string>

    <string name="please_wait">Please wait...</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_success">Successfully logged in</string>
    <string name="login_fail">Failed to log in</string>

    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDPOQ8rQTfsGRElfhcvcWNSndGYKjQXH2o</string>

    <string name="no_loc_provider">No location provider</string>
    <string name="too_far_to_report">You can\'t possibly know there is a fire there</string>
</resources>
