<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:inputType="text"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_alignEnd="@+id/username"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/remember"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:id="@+id/create_user"
        android:onClick="onCreateUser"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/remember"
        android:layout_toRightOf="@+id/username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:onClick="onLogin"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:windowSoftInputMode="stateVisible|adjustResize"
        android:layout_toLeftOf="@+id/username"
        android:layout_below="@+id/remember" />

</RelativeLayout>
